# petekstatic

./: .gitignore  API.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SPEC.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: mc.rs  surface.rs  uncertainty_mc.rs
crates/petekstatic-error/: Cargo.toml
crates/petekstatic-error/src/: lib.rs
crates/petekstatic-py/: Cargo.toml
crates/petekstatic-py/src/: lib.rs
crates/srs-data/: Cargo.toml
crates/srs-data/src/: adapter.rs  lib.rs  logs.rs  wireframe.rs
crates/srs-data/src/petekio/: mod.rs
crates/srs-data/tests/: integration_petekio.rs
crates/srs-data/tests/fixtures/wells/15_9-A1/: sample.las  tops.csv
crates/srs-grid/: Cargo.toml
crates/srs-grid/src/: box_construction.rs  cell.rs  geometry.rs  grid.rs  index.rs  klayer.rs  lib.rs  point.rs  property.rs  segment.rs  volume.rs
crates/srs-gridder/: Cargo.toml
crates/srs-gridder/benches/: surface.rs
crates/srs-gridder/src/: layering.rs  lib.rs  surface.rs
crates/srs-gridder/tests/: adoption_readiness.rs
crates/srs-model/: Cargo.toml
crates/srs-model/benches/: mc.rs  scatter_condition.rs
crates/srs-model/examples/: rss_probe.rs  volume_bench.rs
crates/srs-model/src/: builder.rs  draw.rs  lib.rs  mc.rs  model.rs  pipeline.rs  population.rs  provenance.rs  spec.rs  template.rs  tornado.rs  trend.rs  zones.rs
crates/srs-model/src/view/: frame.rs  map.rs  mod.rs  section.rs  volume.rs
crates/srs-model/tests/: mode_matrix.rs  multizone_acceptance.rs  out_of_core.rs  perf_budgets.rs  scatter_profile.rs  spec_conformance.rs  structural_uncertainty.rs  structure_fidelity.rs  topsonly_envelope.rs  zoned_fixes.rs
crates/srs-petro/: Cargo.toml
crates/srs-petro/src/: power_mean.rs  upscale.rs
crates/srs-spill/: Cargo.toml
crates/srs-spill/src/: budget.rs  lib.rs  spill.rs
crates/srs-uncertainty/: Cargo.toml
crates/srs-uncertainty/benches/: mc.rs
crates/srs-uncertainty/src/: distribution.rs  lib.rs  monte_carlo.rs  summary.rs
crates/srs-volumetrics/: Cargo.toml
crates/srs-volumetrics/src/: backing.rs  fvf.rs  grv.rs  populate.rs  valid.rs
crates/srs-wireframe/: Cargo.toml
docs/: guide.md
examples/: rss_probe.rs  volume_bench.rs
python/petekstatic/: __init__.py  workflow.py
python/tests/: conftest.py  test_api_lock.py  test_smoke.py  test_static_property_workflow_perf.py  test_workflow_facade.py
src/: lib.rs  wireframe.rs
src/data/: adapter.rs  logs.rs  mod.rs  wireframe.rs
src/data/petekio/: mod.rs
src/error/: error.rs  mod.rs
src/grid/: box_construction.rs  cell.rs  geometry.rs  grid.rs  index.rs  mod.rs  property.rs  volume.rs
src/gridder/: layering.rs  mod.rs  surface.rs
src/model/: builder.rs  draw.rs  mc.rs  mod.rs  model.rs  pipeline.rs  population.rs  provenance.rs  spec.rs  template.rs  tornado.rs  trend.rs  zones.rs
src/model/view/: frame.rs  map.rs  mod.rs  section.rs  volume.rs  wire.rs
src/petro/: mod.rs  power_mean.rs  upscale.rs
src/spill/: budget.rs  mod.rs  spill.rs
src/uncertainty/: distribution.rs  gaussian.rs  monte_carlo.rs  rng.rs  summary.rs
src/volumetrics/: backing.rs  fvf.rs  grv.rs  mod.rs  names.rs  populate.rs  valid.rs
tests/: adoption_readiness.rs  integration_petekio.rs  mode_matrix.rs  multizone_acceptance.rs  out_of_core.rs  perf_budgets.rs  rotated_view_bundles.rs  scatter_profile.rs  spec_conformance.rs  structural_uncertainty.rs  structure_fidelity.rs  topsonly_envelope.rs  zoned_fixes.rs
tests/fixtures/: simple.irap
