[package]
name = "petekstatic"
description = "petekStatic — the GEOMODEL layer: structural framework, grid construction, property modelling, volumetrics and static uncertainty, consolidated into one crate."
keywords = ["subsurface", "reservoir", "geomodel", "volumetrics", "geostatistics"]
categories = ["science", "simulation"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
# The published crate ships no test/example data (house rule).
exclude = ["/tests", "/examples", "/dev-docs", "/inbox", "/docs", "/python", "/dist-launch"]

[lints]
workspace = true

[dependencies]
# petekStatic's single error type (house-style §1); petekio's GeoError and
# petekTools' AlgoError compose into StaticError via #[from].
thiserror.workspace = true
# CROSS-REPO family deps (crates.io): the DATA layer upstream + the horizontal
# TOOLKIT (gridding kernels / units / pproj). One-directional DAG edges.
petekio.workspace = true
petektools.workspace = true
# Config-layer serde (R7): the declarative build/MC config values round-trip as
# scenario files; the derives live on the value types across the modules.
serde.workspace = true
# The geostat kernels (SGS / resample) and the seeded gridder share petekTools'
# ndarray Array2 at the seam — pinned to petekTools' version.
ndarray = "0.17"
# The `view` bundles + the spill store header + the volume binary-block schema.
serde_json = "1"
# Ratified Send/Sync compile-time assertions on the template + model.
static_assertions = "1"
# Rayon shards the structured-MC draw loop (one template clone per worker).
rayon = "1"
# The MC driver threads a single seeded RNG (petekTools `seeded_rng`) through the
# samplers; pinned to petekTools' `rand` so the RNG at the seam is one type.
rand = "0.10"
# The self-contained volume payload base64-wraps the raw little-endian blocks.
base64 = "0.22"

[dev-dependencies]
# Criterion drives every bench (surface / mc / scatter_condition / uncertainty_mc).
criterion = "0.5"
# Property-based degenerate-input testing of the layering/collapse/order-repair
# kernels (testing doctrine R5).
proptest = "1"

[[bench]]
name = "surface"
harness = false

[[bench]]
name = "mc"
harness = false

[[bench]]
name = "scatter_condition"
harness = false

# The Monte-Carlo toolkit micro-bench (was srs-uncertainty's `mc`; renamed on the
# merge to avoid a name collision with the model-level `mc` bench above).
[[bench]]
name = "uncertainty_mc"
harness = false

[workspace]
resolver = "2"
members = [
    "crates/petekstatic-py",
]

[workspace.package]
version = "0.1.11"
edition = "2021"
# BSL-1.1 declared via its SPDX identifier (BUSL-1.1). The full text ships as the
# repo-root LICENSE; the SPDX id is what crates.io / PyPI surface. (A workspace-
# root `license-file` does not package into the individual member crates, so the
# machine-readable SPDX id is the correct, portable declaration here.)
license = "BUSL-1.1"
repository = "https://github.com/kkollsga/petekstatic"
rust-version = "1.80"

[workspace.dependencies]
# The consolidated library crate (the py binding crate depends on it).
petekstatic = { path = ".", version = "0.1.11" }
# CROSS-REPO family deps: resolved from crates.io (the family is published; the
# dev-only [patch.crates-io] was removed at launch).
# petekTools (pure-leaf toolkit, downstream DAG edge): gridding kernels
# (ConvergentGridder / warm-start), units, and the pproj container.
petektools = "0.2.7"
# petekio (DATA layer): the upstream input-data crate. Its `GeoError` composes
# into `StaticError` via `#[from]` so `?` chains DATA→GEOMODEL at the seam.
petekio = "0.3.8"
thiserror = "2"
serde = { version = "1", features = ["derive"] }

# Warnings are errors (CLAUDE.md gate). Applied per-crate via `[lints] workspace = true`.
[workspace.lints.rust]
unused = { level = "deny", priority = -1 }
dead_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }

[profile.release]
lto = true
codegen-units = 1
