[package]
name = "petekstatic-py"
description = "Thin PyO3 bindings over petekStatic — build a static reservoir model and read volumes + view bundles from Python"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
name = "_petekstatic"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29", features = ["abi3-py39", "extension-module"] }
srs-model = { workspace = true }
srs-wireframe = { workspace = true }
srs-gridder = { workspace = true }
srs-volumetrics = { workspace = true }
petekstatic-error = { workspace = true }
serde_json = "1"
