[package]
name = "srs-model"
description = "The StaticModel aggregate + Monte-Carlo regeneration template (top of the geomodel DAG)"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
petekstatic-error.workspace = true
petektools.workspace = true
srs-grid.workspace = true
srs-gridder.workspace = true
srs-petro.workspace = true
srs-wireframe.workspace = true
srs-volumetrics.workspace = true
srs-uncertainty.workspace = true
# srs-spill: the out-of-core backing-storage mode (memory budget + k-slab spill),
# split out of this crate in the P10 organize wave. Re-exported below so the public
# path (`srs_model::MemoryBudget`, `srs_model::spill_grid`, …) is unchanged.
srs-spill.workspace = true
static_assertions = "1"
# The geostat kernels (SGS / resample) return/consume `ndarray::Array2`; pinned to
# petekTools' version so the Array2 at the seam is one type.
ndarray = "0.17"
# Rayon shards the structured-MC draw loop across workers (one template clone per
# worker; `run_structured_mc_parallel`). Pinned to the version already in the tree
# (petekTools' transitive dep) so there is one rayon at the seam.
rayon = "1"
# The MC driver (`mc.rs`) threads a single seeded RNG (petekTools `seeded_rng`)
# through the samplers; the `Rng` trait bound comes from `rand`, pinned to
# petekTools' version so the RNG at the seam is one type.
rand = "0.10"
# The `view` bundles (map / intersection / volume) are serde-Serialize structs —
# the JSON-stable seam the peteksim viewer consumes (never computes over).
serde = { version = "1", features = ["derive"] }
# The `view::wire` streaming serializer writes the bundle envelope straight to an
# `io::Write` (metadata via `to_writer`, no Value tree — the streaming path that
# kills the legacy ~12.7x-payload RSS spike). Also the envelope for the volume
# binary-block schema (SCHEMA_VERSION 3).
serde_json = "1"
# The self-contained volume payload base64-wraps the raw little-endian binary
# blocks inside the JSON envelope; `EncoderWriter` streams base64 straight to the
# writer (no whole-string intermediate).
base64 = "0.22"

[dev-dependencies]
criterion = "0.5"
# The R7 conformance battery (tests/spec_conformance.rs) round-trips every config
# value through serde_json and derives ad-hoc test values.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The scatter-conditioning micro-bench (benches/scatter_condition.rs) times the
# adopted petekTools direct operator's factor vs resolve split directly (the
# factor-once/solve-many MC lever); needs the kernel + its Array2 at bench scope.
petektools.workspace = true
ndarray = "0.17"

[[bench]]
name = "mc"
harness = false

[[bench]]
name = "scatter_condition"
harness = false
