[package]
name = "srs-spill"
description = "Out-of-core backing-storage mode for the StaticModel — k-slab spill onto a petekTools store + the memory-budget/build-mode decision"
keywords = ["subsurface", "reservoir", "out-of-core", "grid", "geomodel"]
categories = ["science", "data-structures"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
petekstatic-error.workspace = true
petektools.workspace = true
srs-grid.workspace = true
# The spilled volumetric surface streams through srs-volumetrics' unified core
# (`compute_clipped` over a `SlabSource`), so there is no hand-maintained twin of
# the GRV/HCPV loop on the out-of-core path.
srs-volumetrics.workspace = true
# `store_schema` tags the spill file's app-metadata block with a small JSON header.
serde_json = "1"
