[package]
name = "srs-uncertainty"
description = "Monte Carlo sampling, distributions, P90/P50/P10 (over static-model realizations)"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
petekstatic-error.workspace = true
# The one reservoir P90/P50/P10 digest + type-7 percentile kernel lives in
# petekTools (horizontal DAG dep); this crate delegates, keeping only the typed
# empty-input wrapper the FFI needs (H1).
petektools.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "mc"
harness = false
